making relevant changes to apache conf for production

--- a/envconfig/ehp/hybris/prod/apache/extra/httpd-vhosts.conf
+++ b/envconfig/ehp/hybris/prod/apache/extra/httpd-vhosts.conf
@@ -19,8 +19,8 @@
 
 KeepAlive on
 KeepAliveTimeout 6000
-NameVirtualHost qa.energizer.com:80
-NameVirtualHost qa.energizer.com:443
+NameVirtualHost energizer.com:80
+NameVirtualHost energizer.com:443
 
 AddType application/x-x509-ca-cert .crt
 AddType application/x-pkcs7-crl    .crl
@@ -32,43 +32,43 @@ AddType application/x-pkcs7-crl    .crl
 # The first VirtualHost section is used for all requests that do not
 # match a ServerName or ServerAlias in any <VirtualHost> block.
 #
-<VirtualHost qa.energizer.com:80>
+<VirtualHost energizer.com:80>
         ServerAdmin customerservice@enr.com
-        DocumentRoot "W:\Apache2.2\htdocs"
-        ServerName qa.energizer.com
-       #ServerAlias qa.energizer.com
+        DocumentRoot "W:\valid_folder_path"
+        ServerName energizer.com
+       
 		
 		RewriteEngine on
 		RewriteRule ^/?(.*) https://%{HTTP_HOST}:443/$1 [L,R,NE]
-		#RewriteRule ^/?(.*) https://google.com:443/$1 [L,R,NE]
-        
-		
-        ProxyPass / http://energizer.qa.com:9001/
-        ProxyPassReverse / http://energizer.qa.com:9001/
+				
+        ProxyPass / http://live.energizer.com:9001/
+        ProxyPassReverse / http://live.energizer.com:9001/
 
-        ErrorLog logs/qa.energizer.com-error.log
-        CustomLog logs/qa.energizer.com-access.log common
+        ErrorLog logs/live.energizer.com-error.log
+        CustomLog logs/live.energizer.com-access.log common
 </VirtualHost>
-<VirtualHost qa.energizer.com:443>
+<VirtualHost live.energizer.com:443>
         ServerAdmin customerservice@enr.com
-        DocumentRoot "W:\Apache2.2\htdocs"
-        ServerName qa.energizer.com
-        #ServerAlias qa.energizer.com
+        DocumentRoot "W:\valid_folder_path"
+        ServerName live.energizer.com
+        
 		
 		SSLEngine on
         SSLProxyEngine On
 
         SSLProtocol all -SSLv2
         SSLCipherSuite HIGH:MEDIUM:!aNULL:!MD5
-        SSLCertificateFile "W:/Apache2.2/conf/ssl/qaenergizer.crt"
-        SSLCertificateKeyFile "W:/Apache2.2/conf/ssl/qaenergizer.key"
+        SSLCertificateFile "W:/certificate_path/liveenergizer.crt"
+        SSLCertificateKeyFile "W:/certificate_key_path/liveenergizer.key"
 
         RewriteEngine on  
+		RewriteRule ^/?(reportcockpit|admincockpit|cscockpit|cmscockpit|productcockpit|mcc) -  [R=403,L,F]
+		RewriteRule ^/?(oci|solrfacetsearch|hmc|hmc_junit|text|acceleratorservices|rest) -  [R=403,L,F]
+		RewriteRule ^/?(test|maintenance|hac|hac_junit|virtualjdbc|backoffice|bmecat) -  [R=403,L,F]
 		
-		
-        ProxyPass / https://energizer.qa.com:9002/
-        ProxyPassReverse / https://energizer.qa.com:9002/
+        ProxyPass / https://live.energizer.com:9002/
+        ProxyPassReverse / https://live.energizer.com:9002/
 
-        ErrorLog logs/ssl-qa.energizer.com-error.log
-        CustomLog logs/ssl-qa.energizer.com-access.log common
+        ErrorLog logs/ssl-live.energizer.com-error.log
+        CustomLog logs/ssl-live.energizer.com-access.log common
 </VirtualHost>
