--- a/envconfig/ehp/hybris/prod/local.properties
+++ b/envconfig/ehp/hybris/prod/local.properties
@@ -133,10 +133,10 @@ feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
 #----------------------------------
 # Website URL
 #----------------------------------
-website.houseHold.http=http://qa.energizer.com
-website.houseHold.https=https://qa.energizer.com
-media.houseHold.http=http://qa.energizer.com
-media.houseHold.https=https://qa.energizer.com
+website.houseHold.http=http://energizer.com
+website.houseHold.https=https://energizer.com
+media.houseHold.http=http://energizer.com
+media.houseHold.https=https://energizer.com
 
 storefront.security.default.required.channel=https
 #----------------------------------
@@ -220,8 +220,8 @@ cronjob.maxthreads=50
 hmc.debug.showjspcomments=false
 hmc.developermode=false
 
-tomcat.site.proxyName=qa.energizer.com
-tomcat.site.hostName=energizer.qa.com
+tomcat.site.proxyName=energizer.com
+tomcat.site.hostName=live.energizer.com
 
 # The port that proxy Apache server instance uses for unsecured connections. This is the publicly accessible HTTP port.
 proxy.http.port=80
