--- a/envconfig/epc/hybris/prod/local.properties
+++ b/envconfig/epc/hybris/prod/local.properties
@@ -140,10 +140,10 @@ feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
 #---------------------------------------------
 #website url
 #---------------------------------------------
-website.personalCare.http=http://qa.edgewell.com
-website.personalCare.https=https://qa.edgewell.com
-media.personalCare.http=http://qa.edgewell.com
-media.personalCare.https=https://qa.edgewell.com
+website.personalCare.http=http://edgewell.com
+website.personalCare.https=https://edgewell.com
+media.personalCare.http=http://edgewell.com
+media.personalCare.https=https://edgewell.com
 
 storefront.security.default.required.channel=https
 
@@ -240,8 +240,8 @@ hmc.developermode=false
 #------------------------------------------------------------------------------------------
 # Proxy and port Properties
 #------------------------------------------------------------------------------------------
-tomcat.site.proxyName=qa.edgewell.com
-tomcat.site.hostName=edgewell.qa.com
+tomcat.site.proxyName=edgewell.com
+tomcat.site.hostName=live.edgewell.com
 
 # The port that proxy Apache server instance uses for unsecured connections. This is the publicly accessible HTTP port.
 proxy.http.port=80
