--- a/envconfig/epc/hybris/prod/apache/extra/httpd-vhosts.conf
+++ b/envconfig/epc/hybris/prod/apache/extra/httpd-vhosts.conf
@@ -17,8 +17,8 @@
 # Use name-based virtual hosting.
 #
 
-NameVirtualHost qa.edgewell.com:80
-NameVirtualHost qa.edgewell.com:443
+NameVirtualHost edgewell.com:80
+NameVirtualHost edgewell.com:443
 
 #
 # VirtualHost example:
@@ -26,32 +26,31 @@ NameVirtualHost qa.edgewell.com:443
 # The first VirtualHost section is used for all requests that do not
 # match a ServerName or ServerAlias in any <VirtualHost> block.
 #
-<VirtualHost qa.edgewell.com:80>
+<VirtualHost edgewell.com:80>
         ServerAdmin customerservice@enr.com
-        DocumentRoot "W:\Apache2.2\htdocs"
-        ServerName qa.edgewell.com
-        #ServerAlias qa.edgewell.com 
+        DocumentRoot "W:\valid_folder_path"
+        ServerName edgewell.com
 		
 		RewriteEngine on
 		ReWriteCond %{SERVER_PORT} !^443$
 		RewriteRule ^/(.*)$ https://%{HTTP_HOST}:443/$1 [NC,R,L]
-		#RewriteRule ^/(.*)$ https://google.com [NC,R,L]
+		
         
-        ErrorLog logs/qa.edgewell-error.log
-        CustomLog logs/qa.edgewell-access.log common
+        ErrorLog logs/live.edgewell-error.log
+        CustomLog logs/live.edgewell-access.log common
 </VirtualHost>
-<VirtualHost qa.edgewell.com:443>
+<VirtualHost edgewell.com:443>
         ServerAdmin customerservice@enr.com
-        DocumentRoot "W:\Apache2.2\htdocs"
-        ServerName qa.edgewell.com
-        #ServerAlias qa.edgewell.com 
+        DocumentRoot "W:\valid_folder_path"
+        ServerName edgewell.com
+        
 
 		SSLEngine on
         SSLProxyEngine On
         SSLProtocol All -SSLv2
         SSLCipherSuite ALL:!ADH:!EXPORT:!SSLv2:RC4+RSA:+HIGH:+MEDIUM:+LOW
-        SSLCertificateFile "W:\Apache2.2\conf\ssl\qa.edgewell.com.crt"
-        SSLCertificateKeyFile "W:\Apache2.2\conf\ssl\qa.edgewell.com.key"
+        SSLCertificateFile "W:/certificate_path/liveedgewell.crt"
+        SSLCertificateKeyFile "W:/certificate_key_path/liveedgewell.key"
 
 		RewriteEngine on
 		
@@ -59,11 +58,11 @@ NameVirtualHost qa.edgewell.com:443
 		RewriteRule ^/?(oci|solrfacetsearch|hmc|hmc_junit|text|acceleratorservices|rest) -  [R=403,L,F]
 		RewriteRule ^/?(test|maintenance|hac|hac_junit|virtualjdbc|backoffice|bmecat) -  [R=403,L,F]
 		 
-        ProxyPass / https://edgewell.qa.com:9002/
-        ProxyPassReverse / https://edgewell.qa.com:9002/
+        ProxyPass / https://live.edgewell.com:9002/
+        ProxyPassReverse / https://live.edgewell.com:9002/
 
-		ErrorLog logs/ssl-qa.edgewell-error.log
-        CustomLog logs/ssl-qa.edgewell-access.log common
+		ErrorLog logs/ssl-live.edgewell-error.log
+        CustomLog logs/ssl-live.edgewell-access.log common
 </VirtualHost>
 
 
