--- a/envconfig/ehp/hybris/qas/local.properties
+++ b/envconfig/ehp/hybris/qas/local.properties
@@ -81,7 +81,7 @@ sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 
 #Shared file location
 
-sharedFolderPath=W:\\CSVFeedFolder\\CSVFeedFolder-EHP
+sharedFolderPath=W:\\CSVFeedFolder
 
 # Container volume in M3 and weight in KG
 #------------------------------------------------------
