email address changed

--- a/envconfig/ehp/hybris/dev/local.properties
+++ b/envconfig/ehp/hybris/dev/local.properties
@@ -33,9 +33,9 @@ mail.smtp.password=
 mail.use.tls=true
 mail.smtp.starttls.enable=true
 #Email address displayed in the "Sender" field (mandatory)
-mail.from=sriram.venkatasubramanian@energizer.com
+mail.from=ehpvalidation@gmail.com
 #Email address used for replying to emails (mandatory)
-mail.replyto=sriram.venkatasubramanian@energizer.com
+mail.replyto=ehpvalidation@gmail.com
 #---------------------------------------------
 # properties for interface types
 interfaceType_EnergizerCustomer=energizerCustomerCSVProcessor
