--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -33,9 +33,9 @@ mail.smtp.password=
 mail.use.tls=true
 mail.smtp.starttls.enable=true
 #Email address displayed in the "Sender" field (mandatory)
-mail.from=epcvalidation@gmail.com
+mail.from=epcvalidatione@gmail.com
 #Email address used for replying to emails (mandatory)
-mail.replyto=epcvalidation@gmail.com
+mail.replyto=epcvalidatione@gmail.com
 #---------------------------------------------
 # properties for interface types
 #---------------------------------------------
