--- a/envconfig/epc/hybris/dev/local.properties
+++ b/envconfig/epc/hybris/dev/local.properties
@@ -34,9 +34,9 @@ mail.smtp.password=
 mail.use.tls=true
 mail.smtp.starttls.enable=true
 #Email address displayed in the "Sender" field (mandatory)
-mail.from=sriram.venkatasubramanian@energizer.com
+mail.from=epcvalidatione@gmail.com
 #Email address used for replying to emails (mandatory)
-mail.replyto=sriram.venkatasubramanian@energizer.com
+mail.replyto=epcvalidatione@gmail.com
 #---------------------------------------------
 # properties for interface types
 interfaceType_EnergizerCustomer=energizerCustomerCSVProcessor
