email id changed to ehpvalidation@gmail.com

--- a/config/local.properties
+++ b/config/local.properties
@@ -120,11 +120,11 @@ marketingcategory.level1.type=Product Segment
 marketingcategory.level2.type=Brand
 marketingcategory.level3.type=Sub-Brand
 
-cronjobs.from.email=sriram.venkatasubramanian@energizer.com
+cronjobs.from.email=ehpvalidation@gmail.com
 
 feedprocessor.productcategoryrelationfeed.headers=MappingCode,Level1,Level2,Level3,Level4
 feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
-energizer.customer.support.from.email=sriram.venkatasubramanian@energizer.com
+energizer.customer.support.from.email=ehpvalidation@gmail.com
 energizer.customer.support.to.email=Chandan.Ar@mindtree.com
 website.energizer.http=http://energizer.local.com:9001
 website.energizer.https=https://energizer.local.com:9002
