--- a/envconfig/ehp/hybris/dev/local.properties
+++ b/envconfig/ehp/hybris/dev/local.properties
@@ -235,7 +235,7 @@ tomcat.ajp.useipv=true
 #------------------------------------------------------------------------------------------
 # Email Properties
 #------------------------------------------------------------------------------------------
-fromEmailAddress.orderEmailSender=sriram.venkatasubramanian@energizer.com
-energizer.customer.support.from.email=sriram.venkatasubramanian@energizer.com
-energizer.customer.support.to.email=sriram.venkatasubramanian@energizer.com
-cronjobs.from.email=sriram.venkatasubramanian@energizer.com
+fromEmailAddress.orderEmailSender=ehpvalidation@gmail.com
+energizer.customer.support.from.email=ehpvalidation@gmail.com
+energizer.customer.support.to.email=ehpvalidation@gmail.com
+cronjobs.from.email=ehpvalidation@gmail.com
