--- a/envconfig/epc/hybris/dev/local.properties
+++ b/envconfig/epc/hybris/dev/local.properties
@@ -254,7 +254,10 @@ tomcat.ajp.useipv=true
 #------------------------------------------------------------------------------------------
 # Email Properties
 #------------------------------------------------------------------------------------------
-fromEmailAddress.orderEmailSender=sriram.venkatasubramanian@energizer.com
-energizer.customer.support.from.email=sriram.venkatasubramanian@energizer.com
-energizer.customer.support.to.email=sriram.venkatasubramanian@energizer.com
-cronjobs.from.email=sriram.venkatasubramanian@energizer.com
+fromEmailAddress.orderEmailSender=epcvalidatione@gmail.com
+
+energizer.customer.support.from.email=epcvalidatione@gmail.com
+
+energizer.customer.support.to.email=epcvalidatione@gmail.com
+
+cronjobs.from.email=epcvalidatione@gmail.com
