--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -254,7 +254,7 @@ tomcat.ajp.useipv=true
 #------------------------------------------------------------------------------------------
 # Email Properties
 #------------------------------------------------------------------------------------------
-fromEmailAddress.orderEmailSender=epcvalidation@gmail.com
-energizer.customer.support.from.email=epcvalidation@gmail.com
-energizer.customer.support.to.email=epcvalidation@gmail.com
-cronjobs.from.email=epcvalidation@gmail.com
+fromEmailAddress.orderEmailSender=epcvalidatione@gmail.com
+energizer.customer.support.from.email=epcvalidatione@gmail.com
+energizer.customer.support.to.email=epcvalidatione@gmail.com
+cronjobs.from.email=epcvalidatione@gmail.com
