--- a/envconfig/ehp/hybris/prod/local.properties
+++ b/envconfig/ehp/hybris/prod/local.properties
@@ -55,7 +55,7 @@ interfaceType_EnergizerProductCategory=energizerProductHierarchyCSVProcessor
 
 #Mandatory Feeds for OrderUpdate CSV Processor
 #Basic Mandatory feeds for OrderUpdate CSV Processor are Status,SAPOrderNo,HybrisOrderNo,ERPMaterialID,UOM
-feedprocessor.energizerOrderUpdateFeed.mandatory=Status,SAPOrderNo,HybrisOrderNo,ERPMaterialID,UOM
+feedprocessor.energizerOrderUpdateFeed.mandatory=Status,SAPOrderNo,ERPMaterialID,UOM
 
 
 #Mandatory Feeds for OfflineOrder CSV Processor
@@ -182,8 +182,8 @@ b2BBudget.Code=1000
 b2BBudget.Name=Unit Name From Properties
 b2BBudget.Isocode=USD
 b2BBudget.StartDate=04/15/2015
-b2BBudget.EndDate=04/15/2016
-b2BBudget.Budget=1000
+b2BBudget.EndDate=04/15/2099
+b2BBudget.Budget=1000000000
 #------------------------------------------
 # set the default B2BUnit cost center	  #
 #------------------------------------------
