--- a/envconfig/ehp/hybris/prod/local-apache.properties
+++ b/envconfig/ehp/hybris/prod/local-apache.properties
@@ -15,28 +15,27 @@ lang.packs=en,es
 
 forgottenPassword.emailContext.expiresInMinutes=30
 forgottenPassword.emailContext.expiresInSeconds=1800
-
-#---------------------------------------------
+#------------------------------------------------
 #Configuration for sites
-#---------------------------------------------
-isEPCEnabled=true
-isEHPEnabled=false
+#------------------------------------------------
+isEPCEnabled=false
+isEHPEnabled=true
 
 energizer.default.password=Energizer@123
 
 #---------------------------------------------
 # Email setup											   						   #
 #---------------------------------------------
-mail.smtp.server=fitsmtp.care.corp
+mail.smtp.server=fitsmtp
 mail.smtp.port=25
 mail.smtp.user=
 mail.smtp.password=
 mail.use.tls=true
 mail.smtp.starttls.enable=true
 #Email address displayed in the "Sender" field (mandatory)
-mail.from=epcvalidatione@gmail.com
+mail.from=ehpvalidation@gmail.com
 #Email address used for replying to emails (mandatory)
-mail.replyto=epcvalidatione@gmail.com
+mail.replyto=ehpvalidation@gmail.com
 #---------------------------------------------
 # properties for interface types
 interfaceType_EnergizerCustomer=energizerCustomerCSVProcessor
@@ -68,26 +67,22 @@ feedprocessor.energizerOfflineOrderFeed.mandatory=Status,SAPOrderNo,B2BAccount,C
 #Possible Order Status
 #If you want to add new order status that is not OOTB then you must add in energizercore-items.xml and need to update the system
 possibleOrderStatus=PENDING,IN_PROCESS,SHIPPED,INVOICED,CANCELLED
-offline.energizer.site = personalCare
+offline.energizer.site = houseHold
 ponumber.checking.pattern=[ A-Za-z0-9_@./\\\\#&+-]*$
 
 #Date Format
 dateFormat=yyyyMMddHHmmss
 deliveryDateFormat=yyyyMMdd
 
-#------------------------------------------------------
 #From email address details for sending order email
-#------------------------------------------------------
 fromEmailDisplayName.orderEmailSender=Customer Service
 
 sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 
-#------------------------------------------------------
 #Shared file location
-#------------------------------------------------------
-sharedFolderPath=W:\\CSVFeedFolder
 
-#------------------------------------------------------
+sharedFolderPath=W:\\CSVFeedFolder\\CSVFeedFolder-EHP
+
 # Container volume in M3 and weight in KG
 #------------------------------------------------------
 twenty.feet.container.volume=30.44056
@@ -99,7 +94,7 @@ excelFileSize=1000000
 #------------------------------------------------------ 
 #Catalog Version Information
 #------------------------------------------------------
-catalogName=personalCareProductCatalog
+catalogName=houseHoldProductCatalog
 version=Online
 
 
@@ -109,20 +104,19 @@ invoice.urlpath=http://localhost/invoice/
 
 
 #material name feed properties
-feedprocessor.productcatalog.id=personalCareProductCatalog
+feedprocessor.productcatalog.id=houseHoldProductCatalog
 feedprocessor.productcatalog.version=Online
 feedprocessor.materialnamefeed.headers=ERPMaterialID,Language,ProductDesription
 feedprocessor.materialnamefeed.headers.mandatory=ERPMaterialID,Language,ProductDesription
 interfaceType_MaterialNameFeed=energizerProductNameCSVProcessor
 
 simulateTimeOutinSeconds=30
-
-#--------------------------------------------------------
-#Biz Talk URL for order simulate, create and report
-#--------------------------------------------------------
-simulateURL=http://10.99.13.61:8080/SalesOrderSimulate
-orderSubmitURL=http://10.99.13.61:8080/SalesOrderCreate
-invoicePdfURL=http://10.99.13.61:8080/GenerateURL
+#------------------------------------------------
+#Bistalk URL for order create, simulate and report
+#------------------------------------------------
+simulateURL=http://10.240.0.111:8080/SalesOrderSimulate
+orderSubmitURL=http://10.240.0.111:8081/SalesOrderCreate
+invoicePdfURL=http://10.240.0.111:8080/GenerateURL
 
 feedprocessor.materialcategoryfeed.headers=ERPMaterialID,SegmentName,SegmentDescription,FamilyName,FamilyDescription,GroupName,GroupDescription,SubGroupName,SubGroupDescription
 feedprocessor.materialcategoryfeed.headers.mandatory=ERPMaterialID
@@ -136,78 +130,67 @@ marketingcategory.level3.type=Sub-Brand
 
 feedprocessor.productcategoryrelationfeed.headers=MappingCode,Level1,Level2,Level3,Level4
 feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
-
-#---------------------------------------------
-#website url
-#---------------------------------------------
-website.personalCare.http=http://edgewell.com
-website.personalCare.https=https://edgewell.com
-media.personalCare.http=http://edgewell.com
-media.personalCare.https=https://edgewell.com
+#----------------------------------
+# Website URL
+#----------------------------------
+website.houseHold.http=http://energizer.com
+website.houseHold.https=https://energizer.com
+media.houseHold.http=http://energizer.com
+media.houseHold.https=https://energizer.com
 
 storefront.security.default.required.channel=https
-
 #----------------------------------
 #Oracle DB setup Information
 #----------------------------------
-db.url=jdbc:oracle:thin:@10.98.1.206:1521:hbq
+db.url=jdbc:oracle:thin:@10.97.1.158:1521:hbq
 db.driver=oracle.jdbc.driver.OracleDriver
 db.username=hybris
 db.password=hybris
 
-#----------------------------------
+#------------------------------------------------
 # Default value of MOQ  and  Lead Time
-#----------------------------------
+#------------------------------------------------
 feedprocessor.defalult.moq.value=1
 feedprocessor.defalult.uom.value=PAL
 feedprocessor.defalult.leadtime.value=30
 
-#----------------------------------
-#Set the default Log file size
-#----------------------------------
-log4j.appender.FILE.MaxFileSize=10MB
-
-#----------------------------------
+#------------------------------------------------
 # Set the default B2B Unit Limit
 #----------------------------------
 b2b.MaxUserLimit=10
 
-#----------------------------------
+#------------------------------------------------
 # Set the default B2B Unit lead time
 #----------------------------------
 default.lead.time.value=30
 
+#------------------------------------------------
+# Set the default Log file size
+#----------------------------------
+log4j.appender.FILE.MaxFileSize=10MB
+
+storefront.search.pageSize.Desktop=20
+faq.page.url=/faq
+termsandconditions.page.url=/terms-and-conditions
+orderHistoryPageSize=20
+defaultLeadTime=30
 #------------------------------------------------------------------------
 # set the default B2BUnit Budget & Date format mm/dd/yyyy	  			#
 #------------------------------------------------------------------------
-b2BBudget.OriginalCode=10001
+b2BBudget.OriginalCode=OCBD10001
 b2BBudget.Code=1000
-b2BBudget.Name=Print Unit Name Here
+b2BBudget.Name=Unit Name From Properties
 b2BBudget.Isocode=USD
 b2BBudget.StartDate=04/15/2015
 b2BBudget.EndDate=04/15/2016
 b2BBudget.Budget=1000
-
 #------------------------------------------
 # set the default B2BUnit cost center	  #
 #------------------------------------------
-b2bCostCenter.OriginalCode=10001
+b2bCostCenter.OriginalCode=OCF10001
 b2bCostCenter.Code=1001
-b2bCostCenter.Name=Print Cost Centre Name
+b2bCostCenter.Name=Cost Centre Name
 b2bCostCenter.Isocode=USD
-
-#------------------------------------------
-# set the default storefront page size	  #
-#------------------------------------------
-storefront.search.pageSize.Desktop=20
-orderHistoryPageSize=20
-defaultLeadTime=30
-
-#------------------------------------------
-# set the default fag and t&c url here	  #
-#------------------------------------------
-faq.page.url=/faq
-termsandconditions.page.url=/terms-and-conditions
 
 ####################################***** JVM Settings *************###############################
 tomcat.maxthreads=200
@@ -237,11 +220,22 @@ cronjob.maxthreads=50
 hmc.debug.showjspcomments=false
 hmc.developermode=false
 
+tomcat.site.proxyName=energizer.com
+tomcat.site.hostName=live.energizer.com
+
+# The port that proxy Apache server instance uses for unsecured connections. This is the publicly accessible HTTP port.
+proxy.http.port=80
+
+# The port that proxy Apache server instance uses for SSL-secured connections. This is the publicly accessible HTTPS port.
+proxy.ssl.port=443
+
+#Set this attribute to true to cause Tomcat to use the ServerName passed by the native web server to determine the Host to send the request to. If no attribute given, default value is false.
+tomcat.ajp.useipv=true
 
 #------------------------------------------------------------------------------------------
 # Email Properties
 #------------------------------------------------------------------------------------------
-fromEmailAddress.orderEmailSender=epcvalidatione@gmail.com
-energizer.customer.support.from.email=epcvalidatione@gmail.com
-energizer.customer.support.to.email=epcvalidatione@gmail.com
-cronjobs.from.email=epcvalidatione@gmail.com
+fromEmailAddress.orderEmailSender=ehpvalidation@gmail.com
+energizer.customer.support.from.email=ehpvalidation@gmail.com
+energizer.customer.support.to.email=ehpvalidation@gmail.com
+cronjobs.from.email=ehpvalidation@gmail.com
