--- a/envconfig/ehp/hybris/prod/local.properties
+++ b/envconfig/ehp/hybris/prod/local.properties
@@ -55,7 +55,7 @@ interfaceType_EnergizerProductCategory=energizerProductHierarchyCSVProcessor
 
 #Mandatory Feeds for OrderUpdate CSV Processor
 #Basic Mandatory feeds for OrderUpdate CSV Processor are Status,SAPOrderNo,HybrisOrderNo,ERPMaterialID,UOM
-feedprocessor.energizerOrderUpdateFeed.mandatory=Status,SAPOrderNo,ERPMaterialID,UOM
+feedprocessor.energizerOrderUpdateFeed.mandatory=Status,SAPOrderNo,HybrisOrderNo,ERPMaterialID,UOM
 
 
 #Mandatory Feeds for OfflineOrder CSV Processor
@@ -142,7 +142,7 @@ storefront.security.default.required.channel=https
 #----------------------------------
 #Oracle DB setup Information
 #----------------------------------
-db.url=jdbc:oracle:thin:@10.97.1.166:1521:hbq
+db.url=jdbc:oracle:thin:@10.97.1.158:1521:hbq
 db.driver=oracle.jdbc.driver.OracleDriver
 db.username=hybris
 db.password=hybris
@@ -182,8 +182,8 @@ b2BBudget.Code=1000
 b2BBudget.Name=Unit Name From Properties
 b2BBudget.Isocode=USD
 b2BBudget.StartDate=04/15/2015
-b2BBudget.EndDate=04/15/2099
-b2BBudget.Budget=1000000000
+b2BBudget.EndDate=04/15/2016
+b2BBudget.Budget=1000
 #------------------------------------------
 # set the default B2BUnit cost center	  #
 #------------------------------------------
@@ -220,17 +220,6 @@ cronjob.maxthreads=50
 hmc.debug.showjspcomments=false
 hmc.developermode=false
 
-tomcat.site.proxyName=energizer.com
-tomcat.site.hostName=live.energizer.com
-
-# The port that proxy Apache server instance uses for unsecured connections. This is the publicly accessible HTTP port.
-proxy.http.port=80
-
-# The port that proxy Apache server instance uses for SSL-secured connections. This is the publicly accessible HTTPS port.
-proxy.ssl.port=443
-
-#Set this attribute to true to cause Tomcat to use the ServerName passed by the native web server to determine the Host to send the request to. If no attribute given, default value is false.
-tomcat.ajp.useipv=true
 
 #------------------------------------------------------------------------------------------
 # Email Properties
