--- a/envconfig/epc/hybris/prod/local-apache.properties
+++ b/envconfig/epc/hybris/prod/local-apache.properties
@@ -237,6 +237,20 @@ cronjob.maxthreads=50
 hmc.debug.showjspcomments=false
 hmc.developermode=false
 
+#------------------------------------------------------------------------------------------
+# Proxy and port Properties
+#------------------------------------------------------------------------------------------
+tomcat.site.proxyName=edgewell.com
+tomcat.site.hostName=live.edgewell.com
+
+# The port that proxy Apache server instance uses for unsecured connections. This is the publicly accessible HTTP port.
+proxy.http.port=80
+
+# The port that proxy Apache server instance uses for SSL-secured connections. This is the publicly accessible HTTPS port.
+proxy.ssl.port=443
+
+#Set this attribute to true to cause Tomcat to use the ServerName passed by the native web server to determine the Host to send the request to. If no attribute given, default value is false.
+tomcat.ajp.useipv=true
 
 #------------------------------------------------------------------------------------------
 # Email Properties
