added the label changes for username to username(email)in places where username is required to be provided by the user

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -292,7 +292,7 @@ login.password=Password
 login.required=Required
 login.required.message=Fields marked * are required
 login.title=Returning Customer
-login.username=Username
+login.username=Username(Email)
 myCompany.login.myCompanyHome=Login to My Company
 order.free=FREE
 order.itemPrice=Item Price
