--- a/config/local.properties
+++ b/config/local.properties
@@ -135,8 +135,8 @@ media.energizer.https=https://energizer.local.com:9002
 website.personalCare.http=http://energizer.local.com
 website.personalCare.https=https://energizer.local.com
 
-media.personalCare.http=http://personalcare.local.com:9001
-media.personalCare.https=https://personalcare.local.com:9002
+media.personalCare.http=http://energizer.local.com
+media.personalCare.https=https://energizer.local.com
 
 website.houseHold.http=http://household.local.com:9001
 website.houseHold.https=https://household.local.com:9002
