--- a/config/local.properties
+++ b/config/local.properties
@@ -156,7 +156,7 @@ storefront.security.default.required.channel=https
 ######################################
 feedprocessor.defalult.moq.value=1
 feedprocessor.defalult.uom.value=PAL
-feedprocessor.defalult.leadtime.value=30
+#feedprocessor.defalult.leadtime.value=30
 
 
 storefront.search.pageSize.Desktop=20
