--- a/envconfig/ehp/hybris/qas/local.properties
+++ b/envconfig/ehp/hybris/qas/local.properties
@@ -119,7 +119,7 @@ orderSubmitURL=http://10.240.0.111:8081/SalesOrderCreate
 invoicePdfURL=http://10.240.0.111:8080/GenerateURL
 
 feedprocessor.materialcategoryfeed.headers=ERPMaterialID,SegmentName,SegmentDescription,FamilyName,FamilyDescription,GroupName,GroupDescription,SubGroupName,SubGroupDescription
-feedprocessor.materialcategoryfeed.headers.mandatory=ERPMaterialID
+feedprocessor.materialcategoryfeed.headers.mandatory=ERPMaterialID,SegmentName,FamilyName,GroupName
 
 feedprocessor.categorycategoryrelationfeed.headers=CategoryCode,Category,SuperCategoryCode,SuperCategory,CategoryType,Language
 feedprocessor.categorycategoryrelationfeed.headers.mandatory=CategoryCode,Category,CategoryType,Language
