--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -125,7 +125,7 @@ orderSubmitURL=http://10.99.13.61:8080/SalesOrderCreate
 invoicePdfURL=http://10.99.13.61:8080/GenerateURL
 
 feedprocessor.materialcategoryfeed.headers=ERPMaterialID,SegmentName,SegmentDescription,FamilyName,FamilyDescription,GroupName,GroupDescription,SubGroupName,SubGroupDescription
-feedprocessor.materialcategoryfeed.headers.mandatory=ERPMaterialID
+feedprocessor.materialcategoryfeed.headers.mandatory=ERPMaterialID,SegmentName,FamilyName,GroupName
 
 feedprocessor.categorycategoryrelationfeed.headers=CategoryCode,Category,SuperCategoryCode,SuperCategory,CategoryType,Language
 feedprocessor.categorycategoryrelationfeed.headers.mandatory=CategoryCode,Category,CategoryType,Language
