--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/site-houseHold.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/site-houseHold.properties
@@ -72,4 +72,4 @@ basket.your.shopping.basket=Your Shopping Cart
 breadcrumb.cart=Cart
 popup.cart.title=Your Shopping Cart
 
-login.maxattempts.failed=Your maximum attempts to login has failed. Your account is blocked. Please contact your administrator to unblock your account. Incase, you have forgot your password, click on the Generate New Password link.
+login.maxattempts.failed=You have exceeded the maximum number of login attempts and your account is locked. Please contact the Administrator.
