Apache configs for Prod

--- a/envconfig/epc/hybris/prod/apache/httpd.conf
+++ b/envconfig/epc/hybris/prod/apache/httpd.conf
@@ -160,7 +160,7 @@ Group daemon
 # e-mailed.  This address appears on some server-generated pages, such
 # as error documents.  e.g. admin@your-domain.com
 #
-#ServerAdmin customerservice@enr.com
+ServerAdmin global.econcierge@energizer.com
 
 #
 # ServerName gives the name and port that the server uses to identify itself.
@@ -169,7 +169,7 @@ Group daemon
 #
 # If your host doesn't have a registered DNS name, enter its IP address here.
 #
-ServerName qa.edgewell.com
+ServerName distributorportal.edgewell.com
 
 #
 # DocumentRoot: The directory out of which you will serve your
@@ -211,7 +211,7 @@ ServerName qa.edgewell.com
     # http://httpd.apache.org/docs/2.2/mod/core.html#options
     # for more information.
     #
-    Options Indexes FollowSymLinks ExecCGI 
+    Options Indexes FollowSymLinks
 
     #
     # AllowOverride controls what directives may be placed in .htaccess files.
@@ -253,14 +253,14 @@ ServerName qa.edgewell.com
 # logged here.  If you *do* define an error logfile for a <VirtualHost>
 # container, that host's errors will be logged there and not here.
 #
-ErrorLog "logs/qa.edgewell-error.log"
+ErrorLog "logs/error.log"
 
 #
 # LogLevel: Control the number of messages logged to the error_log.
 # Possible values include: debug, info, notice, warn, error, crit,
 # alert, emerg.
 #
-LogLevel warn
+LogLevel debug
 
 <IfModule log_config_module>
     #
@@ -282,13 +282,13 @@ LogLevel warn
     # define per-<VirtualHost> access logfiles, transactions will be
     # logged therein and *not* in this file.
     #
-    CustomLog "logs/qa.edgewell-access.log" common
+    CustomLog "logs/access.log" common
 
     #
     # If you prefer a logfile with access, agent, and referer information
     # (Combined Logfile Format) you can use the following directive.
     #
-    #CustomLog "logs/qa.edgewell-access.log" combined
+    #CustomLog "logs/access.log" combined
 </IfModule>
 
 <IfModule alias_module>
@@ -297,7 +297,7 @@ LogLevel warn
     # exist in your server's namespace, but do not anymore. The client 
     # will make a new request for the document at its new location.
     # Example:
-    # Redirect permanent /foo http://qa.edgewell.com/bar
+    # Redirect permanent /foo http://distributorportal.edgewell.com/bar
 
     #
     # Alias: Maps web paths into filesystem paths and is used to
@@ -319,7 +319,7 @@ LogLevel warn
     # directives as to Alias.
     #
     ScriptAlias /cgi-bin/ "W:/Apache2.2/cgi-bin/"
-	#Alias /_ui  W:/Apache2.2/htdocs/_ui"
+	Alias /_ui  "W:/Apache2.2/htdocs/_ui"
 </IfModule>
 
 <IfModule cgid_module>
@@ -351,7 +351,7 @@ LogLevel warn
 # text.
 #
 DefaultType text/plain
-KeepAlive On
+
 <IfModule mime_module>
     #
     # TypesConfig points to the file containing the list of mappings from
@@ -415,16 +415,16 @@ KeepAlive On
 #ErrorDocument 500 "The server made a boo boo."
 #ErrorDocument 404 /missing.html
 #ErrorDocument 404 "/cgi-bin/missing_handler.pl"
-#ErrorDocument 402 http://qa.edgewell.com/subscription_info.html
+#ErrorDocument 402 http://distributorportal.edgewell.com/subscription_info.html
 #
-#ErrorDocument 403 /ui/index.html
+
 #
 # MaxRanges: Maximum number of Ranges in a request before
 # returning the entire resource, or one of the special
 # values 'default', 'none' or 'unlimited'.
 # Default setting is to accept 200 Ranges.
 #MaxRanges unlimited
-#ErrorDocument 403 /ui/index.htm
+
 #
 # EnableMMAP and EnableSendfile: On systems that support it, 
 # memory-mapping or the sendfile syscall is used to deliver
