--- a/envconfig/epc/hybris/prod/apache/extra/httpd-vhosts.conf
+++ b/envconfig/epc/hybris/prod/apache/extra/httpd-vhosts.conf
@@ -16,54 +16,54 @@
 #
 # Use name-based virtual hosting.
 #
-
-NameVirtualHost edgewell.com:80
-NameVirtualHost edgewell.com:443
-
+NameVirtualHost distributorportal.edgewell.com:80
+NameVirtualHost distributorportal.edgewell.com:443
 #
 # VirtualHost example:
 # Almost any Apache directive may go into a VirtualHost container.
 # The first VirtualHost section is used for all requests that do not
 # match a ServerName or ServerAlias in any <VirtualHost> block.
 #
-<VirtualHost edgewell.com:80>
-        ServerAdmin customerservice@enr.com
-        DocumentRoot "W:\valid_folder_path"
-        ServerName edgewell.com
+
+<VirtualHost distributorportal.edgewell.com:80>
+        ServerAdmin customerservice@epc.com
+        #DocumentRoot "W:\Apache2.2\htdocs"
+        ServerName distributorportal.edgewell.com
+        #ServerAlias distributorportal.edgewell.com 
 		
 		RewriteEngine on
 		ReWriteCond %{SERVER_PORT} !^443$
 		RewriteRule ^/(.*)$ https://%{HTTP_HOST}:443/$1 [NC,R,L]
-		
-        
-        ErrorLog logs/live.edgewell-error.log
-        CustomLog logs/live.edgewell-access.log common
+        ProxyPass /_ui  !
+        ErrorLog logs/distributorportal.edgewell-error.log
+        CustomLog logs/distributorportal.edgewell-access.log common
 </VirtualHost>
-<VirtualHost edgewell.com:443>
-        ServerAdmin customerservice@enr.com
-        DocumentRoot "W:\valid_folder_path"
-        ServerName edgewell.com
-        
+<VirtualHost distributorportal.edgewell.com:443>
+        ServerAdmin customerservice@epc.com
+        #DocumentRoot "W:\Apache2.2\htdocs"
+        ServerName distributorportal.edgewell.com
+        #ServerAlias distributorportal.edgewell.com 
 
 		SSLEngine on
         SSLProxyEngine On
         SSLProtocol All -SSLv2
         SSLCipherSuite ALL:!ADH:!EXPORT:!SSLv2:RC4+RSA:+HIGH:+MEDIUM:+LOW
-        SSLCertificateFile "W:/certificate_path/liveedgewell.crt"
-        SSLCertificateKeyFile "W:/certificate_key_path/liveedgewell.key"
+        SSLCertificateFile "W:\Apache2.2\conf\ssl\distributorportal.edgewell.com.crt"
+        SSLCertificateKeyFile "W:\Apache2.2\conf\ssl\EVB_wildcard.edgewell.com.key"
+		SSLCertificateChainFile "W:\Apache2.2\conf\ssl\intermediateCertificate.crt"
 
 		RewriteEngine on
 		
 		RewriteRule ^/?(reportcockpit|admincockpit|cscockpit|cmscockpit|productcockpit|mcc) -  [R=403,L,F]
 		RewriteRule ^/?(oci|solrfacetsearch|hmc|hmc_junit|text|acceleratorservices|rest) -  [R=403,L,F]
 		RewriteRule ^/?(test|maintenance|hac|hac_junit|virtualjdbc|backoffice|bmecat) -  [R=403,L,F]
-		 
-        ProxyPass / https://live.edgewell.com:9002/
-        ProxyPassReverse / https://live.edgewell.com:9002/
+		ProxyPass /_ui  ! 
+        ProxyPass / https://hybrisportal.edgewell.com:9002/
+        ProxyPassReverse / https://hybrisportal.edgewell.com:9002/
 
-		ErrorLog logs/ssl-live.edgewell-error.log
-        CustomLog logs/ssl-live.edgewell-access.log common
+		#Alias / "W:\Apache2.2\htdocs\maintainence.html"
+		ErrorLog logs/ssl-distributorportal.edgewell-error.log
+        CustomLog logs/ssl-distributorportal.edgewell-access.log common
 </VirtualHost>
-
 
 
