EHP prod configs

--- a/envconfig/ehp/hybris/prod/local-apache.properties
+++ b/envconfig/ehp/hybris/prod/local-apache.properties
@@ -9,12 +9,13 @@ hac.webroot=/hac
 energizerstorefront.webroot=
 b2bStorefrontContextRoot=
 
-installed.tenants=t1,junit
+installed.tenants=t1
 
 lang.packs=en,es
 
 forgottenPassword.emailContext.expiresInMinutes=30
 forgottenPassword.emailContext.expiresInSeconds=1800
+
 #------------------------------------------------
 #Configuration for sites
 #------------------------------------------------
@@ -33,9 +34,9 @@ mail.smtp.password=
 mail.use.tls=true
 mail.smtp.starttls.enable=true
 #Email address displayed in the "Sender" field (mandatory)
-mail.from=ehpvalidation@gmail.com
+#mail.from=ehpvalidation@gmail.com
 #Email address used for replying to emails (mandatory)
-mail.replyto=ehpvalidation@gmail.com
+#mail.replyto=ehpvalidation@gmail.com
 #---------------------------------------------
 # properties for interface types
 interfaceType_EnergizerCustomer=energizerCustomerCSVProcessor
@@ -74,15 +75,19 @@ ponumber.checking.pattern=[ A-Za-z0-9_@./\\\\#&+-]*$
 dateFormat=yyyyMMddHHmmss
 deliveryDateFormat=yyyyMMdd
 
+#------------------------------------------------------
 #From email address details for sending order email
+#------------------------------------------------------
 fromEmailDisplayName.orderEmailSender=Customer Service
 
 sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 
+#------------------------------------------------------
 #Shared file location
+#------------------------------------------------------
+sharedFolderPath=W:\\CSVFeedFolder
 
-sharedFolderPath=W:\\CSVFeedFolder\\CSVFeedFolder-EHP
-
+#------------------------------------------------------
 # Container volume in M3 and weight in KG
 #------------------------------------------------------
 twenty.feet.container.volume=30.44056
@@ -111,6 +116,7 @@ feedprocessor.materialnamefeed.headers.mandatory=ERPMaterialID,Language,ProductD
 interfaceType_MaterialNameFeed=energizerProductNameCSVProcessor
 
 simulateTimeOutinSeconds=30
+
 #------------------------------------------------
 #Bistalk URL for order create, simulate and report
 #------------------------------------------------
@@ -130,19 +136,21 @@ marketingcategory.level3.type=Sub-Brand
 
 feedprocessor.productcategoryrelationfeed.headers=MappingCode,Level1,Level2,Level3,Level4
 feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
+
 #----------------------------------
-# Website URL
-#----------------------------------
-website.houseHold.http=http://energizer.com
-website.houseHold.https=https://energizer.com
-media.houseHold.http=http://energizer.com
-media.houseHold.https=https://energizer.com
+#website url
+#---------------------------------- 
+website.personalCare.http=http://distributorportal.energizer.com
+website.personalCare.https=https://distributorportal.energizer.com
+media.personalCare.http=http://distributorportal.energizer.com
+media.personalCare.https=https://distributorportal.energizer.com
 
 storefront.security.default.required.channel=https
+
 #----------------------------------
 #Oracle DB setup Information
 #----------------------------------
-db.url=jdbc:oracle:thin:@10.97.1.158:1521:hbq
+db.url=jdbc:oracle:thin:@10.97.1.158:1521:hbp
 db.driver=oracle.jdbc.driver.OracleDriver
 db.username=hybris
 db.password=hybris
@@ -169,11 +177,6 @@ default.lead.time.value=30
 #----------------------------------
 log4j.appender.FILE.MaxFileSize=10MB
 
-storefront.search.pageSize.Desktop=20
-faq.page.url=/faq
-termsandconditions.page.url=/terms-and-conditions
-orderHistoryPageSize=20
-defaultLeadTime=30
 #------------------------------------------------------------------------
 # set the default B2BUnit Budget & Date format mm/dd/yyyy	  			#
 #------------------------------------------------------------------------
@@ -182,7 +185,7 @@ b2BBudget.Code=1000
 b2BBudget.Name=Unit Name From Properties
 b2BBudget.Isocode=USD
 b2BBudget.StartDate=04/15/2015
-b2BBudget.EndDate=04/15/2016
+b2BBudget.EndDate=04/15/2021
 b2BBudget.Budget=1000
 #------------------------------------------
 # set the default B2BUnit cost center	  #
@@ -191,6 +194,20 @@ b2bCostCenter.OriginalCode=OCF10001
 b2bCostCenter.Code=1001
 b2bCostCenter.Name=Cost Centre Name
 b2bCostCenter.Isocode=USD
+
+#------------------------------------------
+# set the default storefront page size	  #
+#------------------------------------------
+storefront.search.pageSize.Desktop=20
+orderHistoryPageSize=20
+defaultLeadTime=30
+
+#------------------------------------------
+# set the default fag and t&c url here	  #
+#------------------------------------------
+faq.page.url=/faq
+termsandconditions.page.url=/terms-and-conditions
+
 
 ####################################***** JVM Settings *************###############################
 tomcat.maxthreads=200
@@ -220,17 +237,6 @@ cronjob.maxthreads=50
 hmc.debug.showjspcomments=false
 hmc.developermode=false
 
-tomcat.site.proxyName=energizer.com
-tomcat.site.hostName=live.energizer.com
-
-# The port that proxy Apache server instance uses for unsecured connections. This is the publicly accessible HTTP port.
-proxy.http.port=80
-
-# The port that proxy Apache server instance uses for SSL-secured connections. This is the publicly accessible HTTPS port.
-proxy.ssl.port=443
-
-#Set this attribute to true to cause Tomcat to use the ServerName passed by the native web server to determine the Host to send the request to. If no attribute given, default value is false.
-tomcat.ajp.useipv=true
 
 #------------------------------------------------------------------------------------------
 # Email Properties
@@ -239,3 +245,17 @@ fromEmailAddress.orderEmailSender=ehpvalidation@gmail.com
 energizer.customer.support.from.email=ehpvalidation@gmail.com
 energizer.customer.support.to.email=ehpvalidation@gmail.com
 cronjobs.from.email=ehpvalidation@gmail.com
+
+
+#----------------- Non mandatory Apache settings ----------------------enable them only needed---#
+#tomcat.site.proxyName=energizer.com
+#tomcat.site.hostName=live.energizer.com
+
+# The port that proxy Apache server instance uses for unsecured connections. This is the publicly accessible HTTP port.
+#proxy.http.port=80
+
+# The port that proxy Apache server instance uses for SSL-secured connections. This is the publicly accessible HTTPS port.
+#proxy.ssl.port=443
+
+#Set this attribute to true to cause Tomcat to use the ServerName passed by the native web server to determine the Host to send the request to. If no attribute given, default value is false.
+#tomcat.ajp.useipv=true
