EPC prod configs

--- a/envconfig/epc/hybris/prod/local-apache.properties
+++ b/envconfig/epc/hybris/prod/local-apache.properties
@@ -9,7 +9,7 @@ hac.webroot=/hac
 energizerstorefront.webroot=
 b2bStorefrontContextRoot=
 
-installed.tenants=t1,junit
+installed.tenants=t1
 
 lang.packs=en,es
 
@@ -34,9 +34,9 @@ mail.smtp.password=
 mail.use.tls=true
 mail.smtp.starttls.enable=true
 #Email address displayed in the "Sender" field (mandatory)
-mail.from=epcvalidatione@gmail.com
+#mail.from=ehpvalidation@gmail.com
 #Email address used for replying to emails (mandatory)
-mail.replyto=epcvalidatione@gmail.com
+#mail.replyto=ehpvalidation@gmail.com
 #---------------------------------------------
 # properties for interface types
 interfaceType_EnergizerCustomer=energizerCustomerCSVProcessor
@@ -125,7 +125,7 @@ orderSubmitURL=http://10.99.13.61:8080/SalesOrderCreate
 invoicePdfURL=http://10.99.13.61:8080/GenerateURL
 
 feedprocessor.materialcategoryfeed.headers=ERPMaterialID,SegmentName,SegmentDescription,FamilyName,FamilyDescription,GroupName,GroupDescription,SubGroupName,SubGroupDescription
-feedprocessor.materialcategoryfeed.headers.mandatory=ERPMaterialID
+feedprocessor.materialcategoryfeed.headers.mandatory=ERPMaterialID,SegmentName,FamilyName,GroupName
 
 feedprocessor.categorycategoryrelationfeed.headers=CategoryCode,Category,SuperCategoryCode,SuperCategory,CategoryType,Language
 feedprocessor.categorycategoryrelationfeed.headers.mandatory=CategoryCode,Category,CategoryType,Language
@@ -140,17 +140,17 @@ feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
 #---------------------------------------------
 #website url
 #---------------------------------------------
-website.personalCare.http=http://edgewell.com
-website.personalCare.https=https://edgewell.com
-media.personalCare.http=http://edgewell.com
-media.personalCare.https=https://edgewell.com
+website.personalCare.http=http://distributorportal.edgewell.com
+website.personalCare.https=https://distributorportal.edgewell.com
+media.personalCare.http=http://distributorportal.edgewell.com
+media.personalCare.https=https://distributorportal.edgewell.com
 
 storefront.security.default.required.channel=https
 
 #----------------------------------
 #Oracle DB setup Information
 #----------------------------------
-db.url=jdbc:oracle:thin:@10.98.1.206:1521:hbq
+db.url=jdbc:oracle:thin:@10.98.1.206:1521:hbp
 db.driver=oracle.jdbc.driver.OracleDriver
 db.username=hybris
 db.password=hybris
@@ -160,7 +160,7 @@ db.password=hybris
 #----------------------------------
 feedprocessor.defalult.moq.value=1
 feedprocessor.defalult.uom.value=PAL
-feedprocessor.defalult.leadtime.value=30
+#feedprocessor.defalult.leadtime.value=30
 
 #----------------------------------
 #Set the default Log file size
@@ -185,7 +185,7 @@ b2BBudget.Code=1000
 b2BBudget.Name=Print Unit Name Here
 b2BBudget.Isocode=USD
 b2BBudget.StartDate=04/15/2015
-b2BBudget.EndDate=04/15/2016
+b2BBudget.EndDate=04/15/2021
 b2BBudget.Budget=1000
 
 #------------------------------------------
@@ -237,20 +237,6 @@ cronjob.maxthreads=50
 hmc.debug.showjspcomments=false
 hmc.developermode=false
 
-#------------------------------------------------------------------------------------------
-# Proxy and port Properties
-#------------------------------------------------------------------------------------------
-tomcat.site.proxyName=edgewell.com
-tomcat.site.hostName=live.edgewell.com
-
-# The port that proxy Apache server instance uses for unsecured connections. This is the publicly accessible HTTP port.
-proxy.http.port=80
-
-# The port that proxy Apache server instance uses for SSL-secured connections. This is the publicly accessible HTTPS port.
-proxy.ssl.port=443
-
-#Set this attribute to true to cause Tomcat to use the ServerName passed by the native web server to determine the Host to send the request to. If no attribute given, default value is false.
-tomcat.ajp.useipv=true
 
 #------------------------------------------------------------------------------------------
 # Email Properties
@@ -259,3 +245,16 @@ fromEmailAddress.orderEmailSender=epcvalidatione@gmail.com
 energizer.customer.support.from.email=epcvalidatione@gmail.com
 energizer.customer.support.to.email=epcvalidatione@gmail.com
 cronjobs.from.email=epcvalidatione@gmail.com
+
+#----------------- Non mandatory Apache settings ----------------------enable them only needed---#
+#tomcat.site.proxyName=energizer.com
+#tomcat.site.hostName=live.energizer.com
+
+#The port that proxy Apache server instance uses for unsecured connections. This is the publicly accessible HTTP port.
+#proxy.http.port=80
+
+# The port that proxy Apache server instance uses for SSL-secured connections. This is the publicly accessible HTTPS port.
+#proxy.ssl.port=443
+
+#Use this for Apache->hybris is based on ajp .Set this attribute to true to cause Tomcat to use the ServerName passed by the native web server to determine the Host to send the request to. If no attribute given, default value is false.
+#tomcat.ajp.useipv=true
