--- a/envconfig/epc/hybris/prod/local-hybris.properties
+++ b/envconfig/epc/hybris/prod/local-hybris.properties
@@ -9,7 +9,7 @@ hac.webroot=/hac
 energizerstorefront.webroot=
 b2bStorefrontContextRoot=
 
-installed.tenants=t1,junit
+installed.tenants=t1
 
 lang.packs=en,es
 
@@ -34,9 +34,9 @@ mail.smtp.password=
 mail.use.tls=true
 mail.smtp.starttls.enable=true
 #Email address displayed in the "Sender" field (mandatory)
-mail.from=epcvalidatione@gmail.com
+#mail.from=ehpvalidation@gmail.com
 #Email address used for replying to emails (mandatory)
-mail.replyto=epcvalidatione@gmail.com
+#mail.replyto=ehpvalidation@gmail.com
 #---------------------------------------------
 # properties for interface types
 interfaceType_EnergizerCustomer=energizerCustomerCSVProcessor
@@ -140,17 +140,17 @@ feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
 #---------------------------------------------
 #website url
 #---------------------------------------------
-website.personalCare.http=http://edgewell.com
-website.personalCare.https=https://edgewell.com
-media.personalCare.http=http://edgewell.com
-media.personalCare.https=https://edgewell.com
+website.personalCare.http=http://hybrisportal.edgewell.com:9001
+website.personalCare.https=https://hybrisportal.edgewell.com:9002
+media.personalCare.http=http://hybrisportal.edgewell.com:9001
+media.personalCare.https=https://hybrisportal.edgewell.com:9002
 
 storefront.security.default.required.channel=https
 
 #----------------------------------
 #Oracle DB setup Information
 #----------------------------------
-db.url=jdbc:oracle:thin:@10.98.1.206:1521:hbq
+db.url=jdbc:oracle:thin:@10.98.1.206:1521:hbp
 db.driver=oracle.jdbc.driver.OracleDriver
 db.username=hybris
 db.password=hybris
@@ -172,6 +172,10 @@ log4j.appender.FILE.MaxFileSize=10MB
 #----------------------------------
 b2b.MaxUserLimit=10
 
+#----------------------------------
+# Set the default B2B Unit lead time
+#----------------------------------
+default.lead.time.value=30
 
 #------------------------------------------------------------------------
 # set the default B2BUnit Budget & Date format mm/dd/yyyy	  			#
@@ -241,3 +245,16 @@ fromEmailAddress.orderEmailSender=epcvalidatione@gmail.com
 energizer.customer.support.from.email=epcvalidatione@gmail.com
 energizer.customer.support.to.email=epcvalidatione@gmail.com
 cronjobs.from.email=epcvalidatione@gmail.com
+
+#----------------- Non mandatory Apache settings ----------------------enable them only needed---#
+#tomcat.site.proxyName=energizer.com
+#tomcat.site.hostName=live.energizer.com
+
+#The port that proxy Apache server instance uses for unsecured connections. This is the publicly accessible HTTP port.
+#proxy.http.port=80
+
+# The port that proxy Apache server instance uses for SSL-secured connections. This is the publicly accessible HTTPS port.
+#proxy.ssl.port=443
+
+#Use this for Apache->hybris is based on ajp .Set this attribute to true to cause Tomcat to use the ServerName passed by the native web server to determine the Host to send the request to. If no attribute given, default value is false.
+#tomcat.ajp.useipv=true
