--- a/config/local.properties
+++ b/config/local.properties
@@ -43,7 +43,7 @@ interfaceType_LeadTime=energizerCustomerLeadTimeCSVProcessor
 interfaceType_EnergizerOfflineOrder=energizerOfflineOrderCSVProcessor
 interfaceType_EnergizerOrderUpdate=energizerOrderUpdateCSVProcessor
 interfaceType_EnergizerProductCategory=energizerProductHierarchyCSVProcessor
-
+interfaceType_EnergizerPasswordExpiry=energizerPasswordExpiryJob
 #Mandatory Feeds for CSV Processors
 
 #Mandatory Feeds for OrderUpdate CSV Processor
@@ -76,6 +76,8 @@ sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 #Shared file location
 
 sharedFolderPath=D:\\CSVFeedFolder
+passwordExpiryDays = 40
+passwordNotificationDays = 10
 
 # Container volume in M3 and weight in KG
 ##########################################
