Added for CR Changes

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -379,6 +379,10 @@ profile.checkEmail=Re-enter email address
 profile.checkEmail.invalid=Please confirm your email address
 profile.checkNewPassword=Confirm New Password
 profile.checkNewPassword.invalid=Please confirm your new password
+profile.passwordQuestion.invalid=Please select a Password Question
+profile.passwordQuestion=Password Question
+profile.passwordAnswer=Password Answer
+profile.passwordAnswer.invalid=Please enter Password Answer
 profile.checkPwd=Confirm Password
 profile.checkPwd.invalid=Please confirm your password
 profile.currentPassword=Current Password
