url updated to orderportal.edgewell.com

--- a/envconfig/epc/hybris/prod/apache/extra/httpd-vhosts.conf
+++ b/envconfig/epc/hybris/prod/apache/extra/httpd-vhosts.conf
@@ -16,8 +16,8 @@
 #
 # Use name-based virtual hosting.
 #
-NameVirtualHost distributorportal.edgewell.com:80
-NameVirtualHost distributorportal.edgewell.com:443
+NameVirtualHost orderportal.edgewell.com:80
+NameVirtualHost orderportal.edgewell.com:443
 #
 # VirtualHost example:
 # Almost any Apache directive may go into a VirtualHost container.
@@ -25,32 +25,32 @@ NameVirtualHost distributorportal.edgewell.com:443
 # match a ServerName or ServerAlias in any <VirtualHost> block.
 #
 
-<VirtualHost distributorportal.edgewell.com:80>
+<VirtualHost orderportal.edgewell.com:80>
         ServerAdmin customerservice@epc.com
         #DocumentRoot "W:\Apache2.2\htdocs"
-        ServerName distributorportal.edgewell.com
-        #ServerAlias distributorportal.edgewell.com 
+        ServerName orderportal.edgewell.com
+        #ServerAlias orderportal.edgewell.com 
 		
 		RewriteEngine on
 		ReWriteCond %{SERVER_PORT} !^443$
 		RewriteRule ^/(.*)$ https://%{HTTP_HOST}:443/$1 [NC,R,L]
         ProxyPass /_ui  !
-        ErrorLog logs/distributorportal.edgewell-error.log
-        CustomLog logs/distributorportal.edgewell-access.log common
+        ErrorLog logs/orderportal.edgewell-error.log
+        CustomLog logs/orderportal.edgewell-access.log common
 </VirtualHost>
-<VirtualHost distributorportal.edgewell.com:443>
+<VirtualHost orderportal.edgewell.com:443>
         ServerAdmin customerservice@epc.com
         #DocumentRoot "W:\Apache2.2\htdocs"
-        ServerName distributorportal.edgewell.com
-        #ServerAlias distributorportal.edgewell.com 
+        ServerName orderportal.edgewell.com
+        #ServerAlias orderportal.edgewell.com 
 
 		SSLEngine on
         SSLProxyEngine On
         SSLProtocol All -SSLv2
         SSLCipherSuite ALL:!ADH:!EXPORT:!SSLv2:RC4+RSA:+HIGH:+MEDIUM:+LOW
-        SSLCertificateFile "W:\Apache2.2\conf\ssl\distributorportal.edgewell.com.crt"
+        SSLCertificateFile "W:\Apache2.2\conf\ssl\orderportal.edgewell.com.crt"
         SSLCertificateKeyFile "W:\Apache2.2\conf\ssl\EVB_wildcard.edgewell.com.key"
-		SSLCertificateChainFile "W:\Apache2.2\conf\ssl\intermediateCertificate.crt"
+		#SSLCertificateChainFile "W:\Apache2.2\conf\ssl\intermediateCertificate.crt"
 
 		RewriteEngine on
 		
@@ -62,8 +62,6 @@ NameVirtualHost distributorportal.edgewell.com:443
         ProxyPassReverse / https://hybrisportal.edgewell.com:9002/
 
 		#Alias / "W:\Apache2.2\htdocs\maintainence.html"
-		ErrorLog logs/ssl-distributorportal.edgewell-error.log
-        CustomLog logs/ssl-distributorportal.edgewell-access.log common
+		ErrorLog logs/ssl-orderportal.edgewell-error.log
+        CustomLog logs/ssl-orderportal.edgewell-access.log common
 </VirtualHost>
-
-
