EHP prod settings after the domain name changes by ENR

--- a/envconfig/ehp/hybris/prod/local-apache.properties
+++ b/envconfig/ehp/hybris/prod/local-apache.properties
@@ -140,10 +140,10 @@ feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
 #----------------------------------
 #website url
 #---------------------------------- 
-website.personalCare.http=http://distributorportal.energizer.com
-website.personalCare.https=https://distributorportal.energizer.com
-media.personalCare.http=http://distributorportal.energizer.com
-media.personalCare.https=https://distributorportal.energizer.com
+website.houseHold.http=http://orderportal.energizer.com
+website.houseHold.https=https://orderportal.energizer.com
+media.houseHold.http=http://orderportal.energizer.com
+media.houseHold.https=https://orderportal.energizer.com
 
 storefront.security.default.required.channel=https
 
