--- a/envconfig/ehp/hybris/prod/local-hybris.properties
+++ b/envconfig/ehp/hybris/prod/local-hybris.properties
@@ -140,10 +140,10 @@ feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
 #----------------------------------
 #website url
 #---------------------------------- 
-website.personalCare.http=http://hybrisportal.energizer.com:9001
-website.personalCare.https=https://hybrisportal.energizer.com:9002
-media.personalCare.http=http://hybrisportal.energizer.com:9001
-media.personalCare.https=https://hybrisportal.energizer.com:9002
+website.houseHold.http=http://hybrisportal.energizer.com:9001
+website.houseHold.https=https://hybrisportal.energizer.com:9002
+media.houseHold.http=http://hybrisportal.energizer.com:9001
+media.houseHold.https=https://hybrisportal.energizer.com:9002
 
 storefront.security.default.required.channel=https
 
