Added for CR Changes

--- a/config/local.properties
+++ b/config/local.properties
@@ -78,6 +78,8 @@ sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 sharedFolderPath=D:\\CSVFeedFolder
 passwordExpiryDays = 30
 passwordNotificationDays = 10
+previousPasswordCount=5
+passwordDelimiter=|
 
 # Container volume in M3 and weight in KG
 ##########################################
