--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -385,6 +385,7 @@ profile.passwordQuestion=Password Question
 profile.passwordAnswer=Password Answer
 profile.passwordAnswer.invalid=Please enter Password Answer
 profile.passwordAnswer.incorrect=Please enter your correct Password Answer
+profile.email.incorrect=Please enter existing Customer's email address
 profile.checkPwd=Confirm Password
 profile.checkPwd.invalid=Please confirm your password
 profile.currentPassword=Current Password
@@ -1530,3 +1531,7 @@ text.account.quickorder.entermoqmultiples=Enter multiples of MOQ(Minimum Orderdi
 text.account.quickorder.inputvalidnumber=Input a valid number
 
 text.account.quickorder.currentShippingPointInCart=Your cart currently has the Shipping Point : 
+account.password.expiry =Your Password has been Expired. Please Generate New Password.
+account.password.expiry.notification = Your Password expires in {0} days.
+
+account.password.isQuestionAnsSet = Please set Password Question and Answer
